unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Reporter_Initial__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reporter_Initial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporter - Initial</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </CustomField>