unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Reprocessor__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Reprocessor__c</fullName>
        <description>Reprocessor</description>
        <label>Reprocessor</label>
        <type>TextArea</type>
    </CustomField>