unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Sex__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>