unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Short_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Short_Description__c</fullName>
        <description>Short Description</description>
        <label>Short Description</label>
        <type>TextArea</type>
    </CustomField>