unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Single_Use_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Single_Use_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Use Device</label>
        <type>Checkbox</type>
    </CustomField>