unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Therapy_Begin_date_2__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Therapy_Begin_date_2__c</fullName>
        <description>Therapy Begin date 2</description>
        <label>Therapy Begin date 2</label>
        <type>Date</type>
    </CustomField>