unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Therapy_Dates__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Therapy_Dates__c</fullName>
        <description>Therapy Dates</description>
        <label>Therapy Dates</label>
        <type>Date</type>
    </CustomField>