unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Therapy_End_date_1__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Therapy_End_date_1__c</fullName>
        <description>Therapy End date 1</description>
        <label>Therapy End date 1</label>
        <type>Date</type>
    </CustomField>