unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Type_of_Report__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type_of_Report__c</fullName>
        <label>Unused Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5-day</fullName>
                </value>
                <value>
                    <fullName>7-day</fullName>
                </value>
                <value>
                    <fullName>10-day</fullName>
                </value>
                <value>
                    <fullName>15-day,30-day</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow Up No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>