unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Type_of_Report_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type_of_Report_Device__c</fullName>
        <inlineHelpText>Type of Report Device only(Initial, Follow-Up)</inlineHelpText>
        <label>Type of Report Device</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>