unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Type_of_Reportable_Event__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type_of_Reportable_Event__c</fullName>
        <label>Type of Reportable Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Serious Injury</fullName>
                </value>
                <value>
                    <fullName>Malfunction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>