unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Type_Report_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type_Report_Device__c</fullName>
        <label>Type of Report - Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>