unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__UF_Dist_Report_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__UF_Dist_Report_No__c</fullName>
        <description>UF/Dist Report No</description>
        <label>UF/Dist Report No</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>