unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__UF_Importer_Report_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__UF_Importer_Report_Number__c</fullName>
        <description>UF/Importer Report#</description>
        <inlineHelpText>UF/Importer Report#</inlineHelpText>
        <label>UF/Importer Report#</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>