unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__UF_Phone_Number__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__UF_Phone_Number__c</fullName>
        <inlineHelpText>Importer Phone Number</inlineHelpText>
        <label>UF Phone Number</label>
        <type>Phone</type>
    </CustomField>