unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Unique_Identifier_UDI__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Unique_Identifier_UDI__c</fullName>
        <label>Unique Identifier (UDI) #</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>