unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Usage_of_Device__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Usage_of_Device__c</fullName>
        <label>Usage of Device</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Use of Device</fullName>
                </value>
                <value>
                    <fullName>Reuse</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>