unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__User_Facility_Importer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__User_Facility_Importer__c</fullName>
        <description>User Facility/Importer</description>
        <label>User Facility/Importer</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>