unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__User_Facility_Importer_Address__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__User_Facility_Importer_Address__c</fullName>
        <description>User Facility/Importer Address</description>
        <inlineHelpText>User Facility/Importer Address</inlineHelpText>
        <label>User Facility/Importer Address</label>
        <type>TextArea</type>
    </CustomField>