unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__User_Facility_Importer_Contact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__User_Facility_Importer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Facility/Importer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MDR (User Facility/Importer Contact)</relationshipLabel>
        <relationshipName>MDR1</relationshipName>
        <type>Lookup</type>
    </CustomField>