unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__User_Facility_or_Importer__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__User_Facility_or_Importer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Facility or Importer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MDR</relationshipLabel>
        <relationshipName>MDR</relationshipName>
        <type>Lookup</type>
    </CustomField>