unpackaged/main/default/objects/CMPL123CME__MDR__c/fields/CMPL123CME__Weight_Units_Patient__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Weight_Units_Patient__c</fullName>
        <description>Weight Units (Patient)</description>
        <label>Weight Units (Patient)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LBS</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>