unpackaged/main/default/objects/CMPL123CME__MDR__c/recordTypes/CMPL123CME__AASR.recordType-meta.xml
<RecordType>
        <fullName>CMPL123CME__AASR</fullName>
        <active>true</active>
        <label>AASR</label>
    </RecordType>