unpackaged/main/default/objects/CMPL123CME__MDR__c/recordTypes/CMPL123CME__IASR.recordType-meta.xml
<RecordType>
        <fullName>CMPL123CME__IASR</fullName>
        <active>true</active>
        <label>IASR</label>
    </RecordType>