unpackaged/main/default/objects/CMPL123CME__MDR__c/recordTypes/CMPL123CME__Initial.recordType-meta.xml
<RecordType>
        <fullName>CMPL123CME__Initial</fullName>
        <active>true</active>
        <description>Initial MDR Information</description>
        <label>Initial</label>
    </RecordType>