unpackaged/main/default/objects/CMPL123CME__MDR__c/recordTypes/CMPL123CME__Supplemental.recordType-meta.xml
<RecordType>
        <fullName>CMPL123CME__Supplemental</fullName>
        <active>true</active>
        <description>If you are a manufacturer, when you obtain information required under this part that you did not provide because it was not known or was not available when you submitted the initial report, you must submit the supplemental information to us within 1 month</description>
        <label>Supplemental</label>
    </RecordType>