unpackaged/main/default/objects/CMPL123CME__MDR__c/validationRules/CMPL123CME__Date_of_Death_Cannot_be_Future_Date.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Date_of_Death_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <description>Date cannot be greater than today's date</description>
        <errorConditionFormula>if(CMPL123CME__Dateof_Death__c &gt;  TODAY(),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Date_of_Death__c</errorDisplayField>
        <errorMessage>Date cannot be greater than today's date</errorMessage>
    </ValidationRule>