unpackaged/main/default/objects/CMPL123CME__MDR__c/validationRules/CMPL123CME__Due_Date_Validation.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Due_Date_Validation</fullName>
        <active>true</active>
        <description>Due Date Validation</description>
        <errorConditionFormula>DATEVALUE(CMPL123CME__Date_Due__c )   &gt;  CMPL123CME__ACK2_Date__c</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Date_Due__c</errorDisplayField>
        <errorMessage>Due date date is greater than aware Date and opened date</errorMessage>
    </ValidationRule>