unpackaged/main/default/objects/CMPL123CME__MDR__c/validationRules/CMPL123CME__Explant_Date_Cannot_be_Future_Date.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Explant_Date_Cannot_be_Future_Date</fullName>
        <active>true</active>
        <errorConditionFormula>if(CMPL123CME__Explant_Date__c&gt; TODAY(),true,false)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Explant_Date__c</errorDisplayField>
        <errorMessage>Date cannot be greater than today's date</errorMessage>
    </ValidationRule>