unpackaged/main/default/objects/CMPL123CME__MDR__c/validationRules/CMPL123CME__Procode_is_a_mandatory_field.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Procode_is_a_mandatory_field</fullName>
        <active>true</active>
        <description>Procode is a mandatory field.</description>
        <errorConditionFormula>AND(RecordType.NamespacePrefix = "CMPL123CME", OR(RecordType.Name = "Initial", RecordType.Name = "Supplemental"), ISBLANK(CMPL123CME__Procode__c))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Procode__c</errorDisplayField>
        <errorMessage>Procode is a mandatory field.</errorMessage>
    </ValidationRule>