unpackaged/main/default/objects/CMPL123CME__MDR__c/validationRules/CMPL123CME__Restriction_to_Multiselect_Picklist.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Restriction_to_Multiselect_Picklist</fullName>
        <active>true</active>
        <description>Restriction</description>
        <errorConditionFormula>AND(IF ( INCLUDES ( CMPL123CME__Device_evaluation_by_manufacturer__c , "Yes" ), true, false ),
IF ( INCLUDES ( CMPL123CME__Device_evaluation_by_manufacturer__c , "No" ), true, false ))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Device_evaluation_by_manufacturer__c</errorDisplayField>
        <errorMessage>You cannot select both Yes and No</errorMessage>
    </ValidationRule>