unpackaged/main/default/objects/CMPL123CME__MDR__c/validationRules/CMPL123CME__Type_of_Reportable_Event_is_a_mandatory.validationRule-meta.xml
<ValidationRule>
        <fullName>CMPL123CME__Type_of_Reportable_Event_is_a_mandatory</fullName>
        <active>true</active>
        <description>Type of Reportable Event is a mandatory field.</description>
        <errorConditionFormula>AND(RecordType.NamespacePrefix = "CMPL123CME", OR(RecordType.Name = "Initial", RecordType.Name = "Supplemental"), ISPICKVAL(CMPL123CME__Type_of_Reportable_Event__c,''))</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Type_of_Reportable_Event__c</errorDisplayField>
        <errorMessage>Type of Reportable Event is a mandatory field.</errorMessage>
    </ValidationRule>