unpackaged/main/default/objects/CMPL123CME__MDR__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123CME__Complaint__c</columns>
        <columns>CMPL123CME__Type_of_Report__c</columns>
        <columns>CMPL123CME__Serial_No__c</columns>
        <columns>CMPL123CME__Patient_ID__c</columns>
        <columns>CMPL123CME__MDR_Submission__c</columns>
        <columns>CMPL123CME__MDR_Type__c</columns>
        <columns>CMPL123CME__Initial_Report_Date_and_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>